Protypes pricing page for ddev.com

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -91,17 +91,24 @@ import SponsorsBanner from "./SponsorsBanner.astro"
           >
         </li>
         <li class="mx-4">
+          <a
+            class="font-bold whitespace-nowrap dark:text-white"
+            href="/pricing"
+            >Pricing</a
+          >
+        </li>
+        <li class="mx-4">
           <a class="font-bold whitespace-nowrap dark:text-white" href="/blog" rel="prefetch"
             >Blog</a
           >
         </li>
-        <li class="mx-4">
+        <!-- <li class="mx-4">
           <a
             class="font-bold whitespace-nowrap dark:text-white"
             href={GITHUB_URL}
             target="_blank">GitHub</a
           >
-        </li>
+        </li> -->
         <li class="mx-4">
           <a
             class="font-bold whitespace-nowrap dark:text-white"
@@ -145,17 +152,24 @@ import SponsorsBanner from "./SponsorsBanner.astro"
         <li>
           <a
             class="font-bold block py-3 px-4 text-lg border-t border-dotted"
-            href="/blog"
-            rel="prefetch">Blog</a
+            href="/pricing"
+            rel="prefetch">Pricing</a
           >
         </li>
         <li>
           <a
             class="font-bold block py-3 px-4 text-lg border-t border-dotted"
+            href="/blog"
+            rel="prefetch">Blog</a
+          >
+        </li>
+        <!-- <li>
+          <a
+            class="font-bold block py-3 px-4 text-lg border-t border-dotted"
             href={GITHUB_URL}
             target="_blank">GitHub</a
           >
-        </li>
+        </li> -->
         <li>
           <a
             class="font-bold block py-3 px-4 text-lg border-t border-dotted"
