Remove more gitpod references

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -55,7 +55,7 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
             ><CloudIcon />
           </span>Cloud
-          <Badge>Codespaces</Badge><Badge>Gitpod</Badge>
+          <Badge>Codespaces</Badge>
         </li>
       </ul>
     </div>
