Add Add-on Registry to the Footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,6 +5,7 @@
 import {
   GITHUB_ISSUES_URL,
   DOCUMENTATION_URL,
+  ADDON_REGISTRY_URL,
   DISCORD_URL,
   EMAIL_URL,
   COPYRIGHT_HOLDER,
@@ -20,6 +21,7 @@ import Icon from "./Icon.astro"
 const navigation = {
   support: [
     { name: "Documentation", href: DOCUMENTATION_URL, target: "_blank" },
+    { name: "Add-on Registry", href: ADDON_REGISTRY_URL, target: "_blank" },
     { name: "Issues", href: GITHUB_ISSUES_URL, target: "_blank" },
     { name: "Discord", href: DISCORD_URL, target: "_blank", me: true },
     { name: "Contact", href: "/contact", me: true }
