Adds Sponsors banner to DDEV.com.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -52,6 +52,9 @@ import {
   }
 </script>
 
+<ddev-sponsors-banner></ddev-sponsors-banner>
+<script src="/src/scripts/sponsors-banner.js"></script>
+
 <header class="w-full p-8">
   <nav
     class="flex justify-between items-center content-center max-w-4xl mx-auto"
