--- a/src/components/PostBody.astro
+++ b/src/components/PostBody.astro
@@ -6,4 +6,7 @@
 
 <div class="prose dark:prose-invert">
   <slot />
+
+  <giscus-comments></giscus-comments>
+  <script src="/src/scripts/giscus-comments.js"></script>
 </div>
