refactor: migrate sponsors banner to component with caching

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,7 @@ import {
   Bars2Icon,
   XMarkIcon,
 } from "@heroicons/react/24/solid/index.js"
+import SponsorsBanner from "./SponsorsBanner.astro"
 ---
 
 <script>
@@ -52,8 +53,7 @@ import {
   }
 </script>
 
-<ddev-sponsors-banner></ddev-sponsors-banner>
-<script src="/src/scripts/sponsors-banner.js"></script>
+<SponsorsBanner />
 
 <header class="w-full p-8">
   <nav
