fix: use giscus only for blog pages, dark text color for 404

--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -111,6 +111,8 @@ const blogPostSchema = [
       <div class="px-6 lg:px-0 lg:w-2/3">
         <PostBody>
           <Content />
+          <giscus-comments></giscus-comments>
+          <script src="/src/scripts/giscus-comments.js"></script>
         </PostBody>
       </div>
       <div class="px-6 lg:px-0 lg:w-1/3 lg:pl-24 mt-12 lg:mt-1">
