--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -89,7 +89,7 @@ const firstCategory = post.data.categories.length
             {post.data.author}
           </a>
         </p>
-        <div class="flex space-x-1 text-sm text-gray-600">
+        <div class="flex space-x-1 text-sm text-gray-600 dark:text-gray-300">
           <time datetime={post.data.pubDate}
             >{formatDate(post.data.pubDate)}</time
           >
