--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -45,10 +45,11 @@ const { latestVersion } = Astro.props
 
 <div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">2/3</small>  Download the latest ddev-windows-installer.exe for your architecture from <a href="https://github.com/ddev/ddev/releases">DDEV Releases</a>.
+    <small class="block font-mono text-xs text-gray-500">2/3</small>  
+    Run the Installer
   </h2>
 
-  <p>Run the installer, selecting the preferred "Docker CE" approach and selecting your "DDEV" distro.</p>
+  <p>Download the latest `ddev-windows-installer.exe` from <a href="https://github.com/ddev/ddev/releases">DDEV Releases</a>, and run it selecting the preferred "Docker CE" approach and selecting your "DDEV" distro.</p>
 
   <p>
     In the “DDEV” terminal app or Windows Terminal, confirm that the "ddev" binary is
@@ -83,7 +84,7 @@ const { latestVersion } = Astro.props
 
   <p>
     Lastly, remove DDEV from Windows by visiting <i>Add or remove programs</i>,
-    finding “DDEV”, and choosing <i>Uninstall</i>. If you do not need the "ddev" distro, you can also remove it with `wsl --unregister ddev`.
+    finding “DDEV”, and choosing <i>Uninstall</i>. If you do not need the "ddev" distro, you can also remove it by running `wsl --unregister ddev`.
   </p>
 
   <CommunityCTA />
