Improve distro removal instructions

--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -84,7 +84,7 @@ const { latestVersion } = Astro.props
 
   <p>
     Lastly, remove DDEV from Windows by visiting <i>Add or remove programs</i>,
-    finding “DDEV”, and choosing <i>Uninstall</i>. If you do not need the "ddev" distro, you can also remove it by running `wsl --unregister ddev`.
+    finding “DDEV”, and choosing <i>Uninstall</i>. If you do not need the "DDEV" distro, you can also remove it by running `wsl --unregister DDEV`.
   </p>
 
   <CommunityCTA />
