Contact page: Prefer discord and issue to email

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -32,6 +32,8 @@ const title = `Contact Us`
           </p>
           
           <ul>
+            <li>Join us on <a href="/s/discord">Discord</a></li>
+            <li>Open a <a href="https://github.com/ddev/ddev/issues">GitHub issue</a></li>
             <li>Email <a href={EMAIL_URL}>support</a></li>
             <li><a href={MEETING_URL}>Set up a meeting</a></li>
           </ul>
