Better info about foundation

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -81,7 +81,10 @@ const title = `Contact Us`
         </section>
 
         <section class="prose dark:prose-invert">
-          <h2>Business Information</h2>
+          <h2>DDEV Foundation Information</h2>
+          <p>
+            Learn more about the <a href="/foundation">DDEV Foundation</a>, our mission, and how we support the DDEV project.
+          </p>
           <address class="not-italic">
             <div class="font-semibold">{ORG_NAME}</div>
             <div>{ORG_STREET}</div>
